selfhost/test/typechecker/while/error_condition_invalid_destructuring_tuple.out
Error at %FILE_NAME%:2:17
Invalid destructuring
  |  while pairs[0] |(k, v)| {
                     ^
A value of type 'Int' cannot be destructured as a tuple
